k8s/heimdall/hostpath-home/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  namespace: home
  labels:
    app: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: heimdall
          image: linuxserver/heimdall:latest
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - name: heimdall-config
              mountPath: /config
      volumes:
        - name: heimdall-config
          hostPath:
            path: /mnt/data/heimdall
            type: DirectoryOrCreate
