k8s/heimdall/hostpath-home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall-service
  namespace: home
spec:
  selector:
    app: heimdall
  ports:
    - name: http
      port: 80
      targetPort: 80
